Add support for argon2id challenges
